<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:padding="@dimen/topmargin"
    >

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/topmargin"
    android:background="@color/whiteColor">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/placeholder" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/topmargin">

        <TextView
            android:id="@+id/lastnamelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastname"
            android:textColor="@color/blackColor"/>

        <TextView
            android:id="@+id/lastname"
            android:textColor="@color/blackColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@+id/lastnamelabel" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/topmargin">

        <TextView
            android:id="@+id/firstnamelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstname"
            android:textColor="@color/blackColor"/>

        <TextView
            android:id="@+id/firstname"
            android:textColor="@color/blackColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@+id/firstnamelabel" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/topmargin">

        <TextView
            android:id="@+id/emaillabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blackColor"
            android:text="@string/email" />

        <TextView
            android:id="@+id/email"
            android:textColor="@color/blackColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@+id/emaillabel" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/topmargin">

        <TextView
            android:id="@+id/companylabel"
            android:textColor="@color/blackColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company" />

        <TextView
            android:id="@+id/company"
            android:textColor="@color/blackColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@+id/companylabel" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/topmargin">

        <TextView
            android:id="@+id/startdatelabel"
            android:textColor="@color/blackColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startdate" />

        <TextView
            android:id="@+id/startdate"
            android:textColor="@color/blackColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@+id/startdatelabel" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/topmargin">

        <TextView
            android:id="@+id/biolabel"
            android:textColor="@color/blackColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bio" />

        <TextView
            android:id="@+id/bio"
            android:textColor="@color/blackColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@+id/biolabel" />
    </RelativeLayout>


</LinearLayout>
</android.support.v7.widget.CardView>